style: add stylization for scrollbars (resolve issue #54)

--- a/client/src/components/blogs/assets/Blogs.css
+++ b/client/src/components/blogs/assets/Blogs.css
@@ -15,6 +15,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    gap: 1em;
 
     height: fit-content;
     width: 20%;
@@ -409,4 +410,17 @@
 
         padding: 0em 1.5em;
     }
+}
+
+::-webkit-scrollbar {
+    height: 0.6em;
+    width: 1em;
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--clr-blogs-bg);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--clr-box-shadow);
 }
